# Oneliner-Py

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: code_quality.yml  coverage_badage.yml  release_pypi.yml  run_test.yml
oneliner/: __init__.py  __main__.py  config.py  contex.py  convert.py  expr_transform.py  expr_unparse.py  namespaces.py  pending_nodes.py  reserved_identifiers.py  scope_analyzer.py  utils.py  version.py
oneliner/presets/: __init__.py  iter_wrapper.py
oneliner_tests/: __main__.py  oneliner_test.py  scope_analyzer_test.py  unparser_test.py
oneliner_tests/test_cases/: break.py  class.py  class_inherit.py  comprehension.py  function_decl.py  function_decorator.py  import.py  nonlocal.py
tests/: __main__.py  oneliner_test.py  oneliner_test_utils.py
tests/test_cases/: assignment.py  aug_assign.py  class_metaclass.py  comprehension.py  for_loop_count.py  function_return.py  global.py  if.py  recursive_interrupt.py
