[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "Oneliner-Py"
version = "1.2.0"
authors = [{ name = "Yunline" }]
description = "Convert python scripts into oneliner expression."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/yunline/Oneliner-Py"
"Bug Tracker" = "https://github.com/yunline/Oneliner-Py/issues"

[tool.setuptools.packages.find]
include = ["oneliner", "oneliner.presets"]

[tool.ruff]
# https://beta.ruff.rs/docs/rules
lint.ignore = [
    "F403", # undefined-local-with-import-star
    "F405", # undefined-local-with-import-star-usage
    "E731", # lambda-assignment
    "E402", # module-import-not-at-top-of-file
]
exclude = ["test_cases"]

[tool.isort]
profile = "black"

[tool.coverage.run]
omit = ["__main__.py"]
